<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.github.davidmoten</groupId>
		<artifactId>sonatype-parent</artifactId>
		<version>0.1</version>
	</parent>

	<artifactId>msgraph-sdk-java</artifactId>
	<version>0.1-SNAPSHOT</version>

	<name>${project.artifactId}</name>
	<description>Public private key encryption</description>
	<url>http://github.com/davidmoten/msgraph-sdk-java</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<scm.url>scm:git:https://github.com/davidmoten/msgraph-sdk-java.git</scm.url>
		<m3.site.version>3.4</m3.site.version>
		<slf4j.version>1.7.12</slf4j.version>

		<cobertura.version>2.7</cobertura.version>
		<checkstyle.version>2.13</checkstyle.version>
		<findbugs.version>3.0.1</findbugs.version>
		<javadoc.version>2.10.2</javadoc.version>
		<pmd.version>3.4</pmd.version>
		<jdepend.version>2.0-beta-2</jdepend.version>
		<javancss.version>2.1</javancss.version>
		<project.info.version>2.7</project.info.version>
		<jxr.version>2.5</jxr.version>
		<taglist.version>2.4</taglist.version>
		<m3.site.version>3.4</m3.site.version>
		<changelog.version>2.2</changelog.version>
	</properties>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<ciManagement>
		<system>Travis</system>
		<url>https://travis-ci.org/davidmoten/msgraph-sdk-java</url>
	</ciManagement>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/davidmoten/msgraph-sdk-java/issues</url>
	</issueManagement>

	<inceptionYear>2015</inceptionYear>
	<developers>
		<developer>
			<id>dave</id>
			<name>Dave Moten</name>
			<url>https://github.com/davidmoten/</url>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+10</timezone>
		</developer>
	</developers>

	<scm>
		<connection>${scm.url}</connection>
		<developerConnection>${scm.url}</developerConnection>
		<url>${scm.url}</url>
		<tag>0.1.5</tag>
	</scm>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.scout.rt</groupId>
			<artifactId>org.eclipse.scout.json</artifactId>
			<version>7.0.0.008_Oxygen</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.3</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<artifactId>log4j</artifactId>
			<groupId>log4j</groupId>
			<version>1.2.17</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<!-- Deploy the web site to github -->
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.12</version>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>site</phase>
						<configuration>
							<server>github</server>
							<message>Deploy site for ${project.artifactId}-${project.version}</message>
							<merge>true</merge>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>${m3.site.version}</version>
				<executions>
					<execution>
						<id>attach-descriptor</id>
						<goals>
							<goal>attach-descriptor</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<excludeDefaults>true</excludeDefaults>
		<outputDirectory>${project.build.directory}/site</outputDirectory>
		<plugins>
			<!-- this one should go first so that it is available to other plugins 
				when they run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${jxr.version}</version>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${cobertura.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle.version}</version>
				<configuration>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${pmd.version}</version>
				<configuration>
					<targetJdk>${maven.compiler.target}</targetJdk>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs.version}</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<effort>Max</effort>
					<!--<excludeFilterFile>findbugs-exclude-filter-amsa.xml</excludeFilterFile> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>${jdepend.version}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javancss-maven-plugin</artifactId>
				<version>${javancss.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${project.info.version}</version>
				<configuration>
					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>${taglist.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${javadoc.version}</version>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<!-- commented this plugin out because cannot run offline (e.g. at home) -->
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-changelog-plugin</artifactId> 
				<version>${changelog.version}</version> <configuration> <username>${svn.username}</username> 
				<password>${svn.password}</password> </configuration> </plugin> -->
		</plugins>
	</reporting>
</project>
